tests/config_module_system_node_root_relative_dirnames/config_module_system_node_root_relative_dirnames.exp
Error ----------------------------------------------------------------------------------------------------- test.js:14:1

Cannot cast `ambiguous` to empty because string literal `first_user_code` [1] is incompatible with empty [2].
[incompatible-type]

   test.js:14:1
   14| ambiguous as empty
       ^^^^^^^^^

References:
   first/ambiguous.js:1:14
    1| const value: "first_user_code" = "first_user_code";
                    ^^^^^^^^^^^^^^^^^ [1]
   test.js:14:14
   14| ambiguous as empty
                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:17:1

Cannot cast `sub_ambiguous` to empty because string literal `first_user_code` [1] is incompatible with empty [2].
[incompatible-type]

   test.js:17:1
   17| sub_ambiguous as empty
       ^^^^^^^^^^^^^

References:
   first/subdir/ambiguous.js:1:14
    1| const value: "first_user_code" = "first_user_code";
                    ^^^^^^^^^^^^^^^^^ [1]
   test.js:17:18
   17| sub_ambiguous as empty
                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:21:1

Cannot cast `user_code` to empty because string literal `first_user_code` [1] is incompatible with empty [2].
[incompatible-type]

   test.js:21:1
   21| user_code as empty
       ^^^^^^^^^

References:
   first/user_code.js:1:14
    1| const value: "first_user_code" = "first_user_code";
                    ^^^^^^^^^^^^^^^^^ [1]
   test.js:21:14
   21| user_code as empty
                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:24:1

Cannot cast `sub_user_code` to empty because string literal `first_user_code` [1] is incompatible with empty [2].
[incompatible-type]

   test.js:24:1
   24| sub_user_code as empty
       ^^^^^^^^^^^^^

References:
   first/subdir/user_code.js:1:14
    1| const value: "first_user_code" = "first_user_code";
                    ^^^^^^^^^^^^^^^^^ [1]
   test.js:24:18
   24| sub_user_code as empty
                        ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:28:1

Cannot cast `second_only_user_code` to empty because string literal `second_only_user_code` [1] is incompatible with
empty [2]. [incompatible-type]

   test.js:28:1
   28| second_only_user_code as empty
       ^^^^^^^^^^^^^^^^^^^^^

References:
   second/second_only_user_code.js:1:14
    1| const value: "second_only_user_code" = "second_only_user_code";
                    ^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:28:26
   28| second_only_user_code as empty
                                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:31:1

Cannot cast `sub_second_only_user_code` to empty because string literal `second_only_user_code` [1] is incompatible with
empty [2]. [incompatible-type]

   test.js:31:1
   31| sub_second_only_user_code as empty
       ^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   second/subdir/second_only_user_code.js:1:14
    1| const value: "second_only_user_code" = "second_only_user_code";
                    ^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:31:30
   31| sub_second_only_user_code as empty
                                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:35:1

Cannot cast `node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-type]

   test.js:35:1
   35| node_code as empty
       ^^^^^^^^^

References:
   node_modules/node_code.js:1:14
    1| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   test.js:35:14
   35| node_code as empty
                    ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:38:1

Cannot cast `sub_node_code` to empty because string literal `node_code` [1] is incompatible with empty [2].
[incompatible-type]

   test.js:38:1
   38| sub_node_code as empty
       ^^^^^^^^^^^^^

References:
   node_modules/subdir/node_code.js:1:14
    1| const value: "node_code" = "node_code";
                    ^^^^^^^^^^^ [1]
   test.js:38:18
   38| sub_node_code as empty
                        ^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:41:25

Cannot resolve module `nonexistent`. [cannot-resolve-module]

   41| import nonexistent from 'nonexistent'
                               ^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:42:29

Cannot resolve module `subdir/nonexistent`. [cannot-resolve-module]

   42| import sub_nonexistent from 'subdir/nonexistent'
                                   ^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:44:1

Cannot cast `require(...)` to number literal `4` because number [1] is incompatible with number literal `4` [2].
[incompatible-type]

   test.js:44:1
   44| require('js_flow') as 4 // resolved, but number ~> 4 error
       ^^^^^^^^^^^^^^^^^^

References:
   third/js_flow.js.flow:1:18
    1| module.exports = 3
                        ^ [1]
   test.js:44:23
   44| require('js_flow') as 4 // resolved, but number ~> 4 error
                             ^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:46:8

Cannot resolve module `4`. [cannot-resolve-module]

   46| import '4'; // error: not in only-here-can-we-use-root-relative-fourth
              ^^^



Found 12 errors
